add java_opt option in config file